--- a/DemonBVL/packages.config
+++ b/DemonBVL/packages.config
@@ -1,9 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.4.9.4" targetFramework="net452" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net452" />
   <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net452" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net452" />
   <package id="ScrapySharp" version="2.6.2" targetFramework="net452" />
+  <package id="SQLite" version="3.13.0" targetFramework="net452" />
+  <package id="System.Data.SQLite" version="1.0.105.2" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net452" />
+  <package id="System.Data.SQLite.EF6" version="1.0.105.2" targetFramework="net452" />
+  <package id="System.Data.SQLite.Linq" version="1.0.105.2" targetFramework="net452" />
 </packages>
