--- a/BusinessEntities/BusinessEntities.csproj
+++ b/BusinessEntities/BusinessEntities.csproj
@@ -45,6 +45,7 @@
     <Compile Include="CategoriaBE.cs" />
     <Compile Include="CotizacionBE.cs" />
     <Compile Include="DataBE.cs" />
+    <Compile Include="DataDetBE.cs" />
     <Compile Include="EmpresaBE.cs" />
     <Compile Include="FeriadoBE.cs" />
     <Compile Include="PromedioBE.cs" />
