--- a/DemonBVL/App.config
+++ b/DemonBVL/App.config
@@ -9,6 +9,9 @@
   </startup>
   <appSettings>
     <add key="FechaInicio" value="2016-01-01" />
+    <add key="Punto" value="." />
+    <add key="Coma" value="," />
+    <add key="PathExcel" value ="C:\Users\VICTOR\Documents\Visual Studio 2015\test.xls"/>
   </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
